--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -1,12 +1,4 @@
-
-/*!----TIPOGRAFÍA----/*/
-
-
-@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@700&family=Russo+One&family=Signika:wght@700&display=swap');
-
-
-/*!----RESET----/*/
-
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Catamaran:wght@700&family=Lato:wght@300;400;700&family=Russo+One&family=Signika:wght@700&display=swap');
 * {
     margin: 0;
     padding: 0;
