--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,7 +5,7 @@ footer{
         .suscripcion-titulo{
             h2{
                 font-size: 24px;
-                font-family: 'Catamaran', sans-serif;
+                font-family: 'Lato', sans-serif;
                 text-align: center;
                 justify-content: center;  
             }
@@ -15,7 +15,7 @@ footer{
             text-align: center;
             justify-content: center;
             font-size: 19px;
-            font-family: 'Catamaran', sans-serif;
+            font-family: 'Lato', sans-serif;
             form{
                 ul{
                     display: flex;
@@ -36,7 +36,7 @@ footer{
                             width: 120px;
                             background-color: #FF2931;
                             border: 2px $color-primario;
-                            margin-left: 0
+                            margin-left: 0;
                         }
                     }
                 }
@@ -57,7 +57,7 @@ footer{
             grid-area: "footer";
             display: flex;
             flex-direction: column;
-            font-family: 'Catamaran', sans-serif;
+            font-family: 'Lato', sans-serif;
             padding: 5px;
             margin: 10px;
             justify-content: center;
@@ -90,7 +90,7 @@ footer{
             align-items: center;
             margin-right: 4px;
             h3{
-                font-family: 'Catamaran', sans-serif;
+                font-family: 'Lato', sans-serif;
                 width: auto;
                 position: relative;
                 text-align: center;
