--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,7 +8,7 @@ header{
         color: white;
         text-align: center;
         font-size: 20px;
-        font-family: 'Catamaran', sans-serif;
+        font-family: 'Lato', sans-serif;;
         font-style: italic;
         display: flex;
         justify-content: center;
@@ -29,7 +29,7 @@ header{
                 height: auto;
                 font-weight: 600;
                 font-size: 50px;
-                font-family: 'Catamaran', sans-serif;
+                font-family: 'Lato', sans-serif;
                 color: $color-primario;
                 }
             }
