--- a/css/estilos.css
+++ b/css/estilos.css
@@ -604,11 +604,13 @@ footer .footer-contenedor {
       display: none; } }
 
 @media screen and (max-width: 750px) {
+  .rebajas-img a .rebajas-60 {
+    display: none; }
   .rebajas-img a .nuevas-rebajas {
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
-    height: 300px; } }
+    width: 100%;
+    height: 400px; } }
 
 @media screen and (max-width: 1400px) {
   .marcas div {
@@ -633,7 +635,8 @@ footer .footer-contenedor {
     height: 220px;
     align-items: center;
     justify-content: space-evenly;
-    display: flex; }
+    display: flex;
+    flex-direction: column; }
     .marcas div a img {
       width: 85px;
       height: 75px;
@@ -770,24 +773,29 @@ footer .footer-contenedor {
           align-items: center; } }
 
 @media screen and (max-width: 1200px) {
-  main .disciplinas .disciplinas-contendor div a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap; }
-    main .disciplinas .disciplinas-contendor div a img {
+  main .disciplinas .disciplinas-contenedor div {
+    width: 380px;
+    height: 240px; }
+    main .disciplinas .disciplinas-contenedor div a {
       display: flex;
-      width: 380px;
-      height: 240px;
-      flex-wrap: wrap; } }
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap; }
+      main .disciplinas .disciplinas-contenedor div a img {
+        display: flex;
+        width: 380px;
+        height: 240px;
+        flex-wrap: wrap; } }
 
 @media screen and (max-width: 850px) {
-  main .disciplinas .disciplinas-contendor {
+  main .disciplinas .disciplinas-contenedor {
     display: flex;
-    flex-direction: column; }
-    main .disciplinas .disciplinas-contendor div a {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    main .disciplinas .disciplinas-contenedor div a {
       gap: 5px; }
-      main .disciplinas .disciplinas-contendor div a img {
+      main .disciplinas .disciplinas-contenedor div a img {
         width: 340px;
         height: 210px;
         padding: 5px; } }
@@ -924,7 +932,7 @@ footer .footer-contenedor {
       margin-bottom: 4px;
       padding: 0; }
       footer .footer-contenedor div h3 {
-        font-size: 14px;
+        font-size: 11px;
         width: 100%;
         height: auto;
         margin-bottom: 0; }
@@ -933,7 +941,8 @@ footer .footer-contenedor {
         margin: 2px;
         margin-top: 0; }
         footer .footer-contenedor div ul li a p {
-          margin: 7px; }
+          margin: 7px;
+          font-size: 11px; }
       footer .footer-contenedor div .redes {
         margin-top: 12px;
         justify-content: center;
