--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -28,16 +28,24 @@
 }
 
 @media screen and (max-width:750px) {
-    .rebajas-img a .nuevas-rebajas {
-        display: flex;
-        flex-wrap: wrap;
-        width: 300px;
-        height: 300px;
+    .rebajas-img{
+        a{
+            .rebajas-60{
+                display: none;
+            }
+            .nuevas-rebajas{
+                display: flex;
+                flex-wrap: wrap;
+                width: 100%;
+                height: 400px;
+            }
+        }
     }
 }
 
-@media screen and (max-width:1400px)  {
-    .marcas div{
+@media screen and (max-width:1400px) {
+    .marcas{
+        div{
         width: auto;
         height: 300px;
         align-items: center;
@@ -48,14 +56,21 @@
             img{
                 width: 120px;
                 height: 95px;
-            }
+                }
+            }   
         }
-    }
+    } 
 }
 
 @media screen and (max-width:800px) {
-    .marcas div a .logo-converse {
-        display: none;
+    .marcas{        
+        div{
+            a{
+                .logo-converse {
+                    display: none;
+                }
+            } 
+        }
     }
 
 }
@@ -68,6 +83,7 @@
             align-items: center;
             justify-content: space-evenly;
             display: flex;
+            flex-direction: column;
             a{
                 img{
                     width: 85px;
@@ -76,7 +92,6 @@
                 }
             }
         }
-        
     }
 }
 
@@ -261,11 +276,13 @@ main{
 }    
 }
 
-@media screen and (max-width:1200px){
+@media screen and (max-width:1200px) {
 main{
     .disciplinas{
-        .disciplinas-contendor{
+        .disciplinas-contenedor{
             div{
+                width: 380px;
+                height: 240px;
                 a{
                     display: flex;
                     justify-content: center;
@@ -287,9 +304,11 @@ main{
 @media screen and (max-width:850px){
 main{
     .disciplinas{
-        .disciplinas-contendor{
+        .disciplinas-contenedor{
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
             div{
                 a{
                     gap: 5px;
@@ -496,7 +515,7 @@ main{
                 margin-bottom: 4px;
                 padding: 0;
                 h3{
-                    font-size: 14px;
+                    font-size: 11px;
                     width: 100%;
                     height: auto;
                     margin-bottom: 0;
@@ -509,6 +528,7 @@ main{
                         a{
                             p{
                                 margin: 7px;
+                                font-size: 11px;
                             }
                         }
                     }
