--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -489,7 +489,507 @@ main{
         justify-content: center;
         flex-wrap: wrap;
         margin-bottom: 50px;
-        div{
+        .rebajas-gorrdo-adidas{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-mochila-element{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-top-drifit{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-canilleras-umbro{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-adidas.adilette{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-react-infinity{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-puma-anzarun{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-pantalon-nike{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-remera-dirfit-nike{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-nike-remera-psg{
+            width: 340px;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            margin: 12px;
+            padding: 3px;
+            a{
+                text-decoration: none;
+                color: black;
+                text-align: center;
+                justify-content: center;
+                width: 270px;
+                height: auto;
+                img{
+                    width: 220px;
+                    height: 220px;
+                    text-align: center;
+                    justify-content: center;
+                }
+                h3{
+                    text-align: center;
+                    justify-content: center;
+                    font-family: 'Lato', sans-serif;
+                    font-size: 16px;
+                    width: 270px;
+                    height: 20px;
+                    margin-top: 7px;
+                }
+                div{
+                    width: 250px;
+                    height: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    strong{
+                        font-size: 15px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                    del{
+                        font-size: 14px;
+                        margin: 3px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+        .rebajas-remera-spw-nike{
             width: 340px;
             height: auto;
             justify-content: center;
@@ -540,4 +1040,4 @@ main{
             }
         }
     }
-}
+}   
